--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -76,4 +76,17 @@
         <attr name="label_text" format="string"/>
         <attr name="label_text_size" format="float"/>
     </declare-styleable>
+
+    <declare-styleable name="FloatLabeledEditText">
+        <!-- 自定义的样式 -->
+        <attr name="fletTextAppearance" format="reference" />
+        <attr name="fletBackground" format="reference|color" />
+        <!--间距-->
+        <attr name="fletPadding" format="reference|dimension" />
+        <attr name="fletPaddingLeft" format="reference|dimension" />
+        <attr name="fletPaddingTop" format="reference|dimension" />
+        <attr name="fletPaddingRight" format="reference|dimension" />
+        <attr name="fletPaddingBottom" format="reference|dimension" />
+
+    </declare-styleable>
 </resources>
