--- a/app/src/main/res/layout/item_left_2.xml
+++ b/app/src/main/res/layout/item_left_2.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 
     <TextView
+        android:layout_weight="1"
         android:id="@+id/tv_item_2"
-        android:text="地区"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
         android:gravity="center"
-        android:textSize="14dp"
+        android:text="地区"
         android:textColor="@color/black"
-        android:layout_width="120dp"
-        android:layout_height="40dp" />
+        android:textSize="14dp" />
 
-</RelativeLayout>
+</LinearLayout>
