--- a/app/src/main/res/layout/list_items.xml
+++ b/app/src/main/res/layout/list_items.xml
@@ -2,18 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content" >
+    android:layout_height="40dp"
+    >
 
     <TextView
+        android:textStyle="bold"
+        android:paddingLeft="0dp"
+        android:paddingRight="0dp"
         android:id="@+id/level_counts"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center"
-        android:paddingBottom="10dip"
-        android:paddingTop="10dip"
         android:textColor="#000000"
-        android:textSize="15sp"
+        android:textSize="17sp"
         android:singleLine="true"
         android:text="合计" />
 
@@ -23,6 +25,7 @@
         android:background="#B4B3B3"/>
 
     <TextView
+        android:textStyle="bold"
         android:id="@+id/level_count_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -30,7 +33,7 @@
         android:paddingBottom="10dip"
         android:paddingTop="10dip"
         android:textColor="#000000"
-        android:textSize="15sp"
+        android:textSize="17sp"
         android:singleLine="true"
         android:gravity="center"
         android:text="0" />
@@ -40,16 +43,59 @@
         android:layout_height="fill_parent"
         android:background="#B4B3B3"/>
 
-    <TextView
-        android:id="@+id/yonghu_count_text"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+
+
+    <RelativeLayout
         android:layout_weight="1"
-        android:paddingBottom="10dip"
-        android:textColor="#000000"
-        android:paddingTop="10dip"
-        android:singleLine="true"
-        android:textSize="15sp"
-        android:gravity="center"
-        android:text="0" />
+        android:layout_width="0dp"
+        android:layout_height="wrap_content">
+
+        <RelativeLayout
+            android:id="@+id/relativeLayout3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true">
+
+
+            <TextView
+                android:textColor="#00FF00"
+                android:textStyle="bold"
+                android:id="@+id/yonghu_count_text_3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_toEndOf="@+id/yonghu_count_text_2"
+                android:layout_toRightOf="@+id/yonghu_count_text_2"
+                android:text="0"
+                android:textSize="17sp" />
+
+            <TextView
+                android:textStyle="bold"
+                android:id="@+id/yonghu_count_text_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_toEndOf="@+id/yonghu_count_text_1"
+                android:layout_toRightOf="@+id/yonghu_count_text_1"
+                android:text="0/"
+                android:textColor="@color/primary_blue"
+                android:textSize="17sp" />
+
+            <TextView
+                android:textStyle="bold"
+                android:id="@+id/yonghu_count_text_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:singleLine="true"
+                android:text="0/"
+                android:textColor="@color/viewfinder_laser"
+                android:textSize="17sp" />
+        </RelativeLayout>
+    </RelativeLayout>
+
+
 </LinearLayout>
