--- a/app/src/main/res/layout/money_activity.xml
+++ b/app/src/main/res/layout/money_activity.xml
@@ -38,6 +38,17 @@
 
 
     </RelativeLayout>
+
+
+
+
+
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
     <android.support.v7.widget.CardView
         android:id="@+id/re_tt"
         android:layout_marginTop="43dp"
@@ -173,5 +184,56 @@
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
+
+
+    <android.support.v7.widget.CardView
+        android:layout_marginBottom="15dp"
+        android:id="@+id/card_2"
+        android:layout_marginTop="35dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <include
+                layout="@layout/list_item"
+                android:id="@+id/table_title"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dip"
+                android:background="#B4B3B3"/>
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            <com.example.asus.zlzjqrcode.huadong.MyListView
+                    android:id="@+id/money_list_2"
+                    android:divider="#B4B3B3"
+                    android:dividerHeight="1.0dip"
+                    android:scrollbars="none"
+                    android:cacheColorHint="@android:color/transparent"
+                    android:fadingEdge="none"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" >
+                </com.example.asus.zlzjqrcode.huadong.MyListView>
+            </ScrollView>
+            <TextView
+                android:background="#B4B3B3"
+                android:layout_width="match_parent"
+                android:layout_height="1dip" />
+            <include
+                layout="@layout/list_items"
+                android:id="@+id/table_title"/>
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
+
+        <View
+            android:id="@+id/view_view"
+            android:layout_width="match_parent"
+            android:layout_height="15dp"/>
+    </LinearLayout>
 
 </LinearLayout>
