--- a/app/src/main/res/layout/shiye_menu.xml
+++ b/app/src/main/res/layout/shiye_menu.xml
@@ -3,13 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <LinearLayout
-        android:visibility="gone"
         android:id="@+id/lin_card_4"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
    <android.support.v7.widget.CardView
+       android:layout_marginBottom="15dp"
        android:id="@+id/card_4"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
@@ -19,7 +20,6 @@
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
-
 
        <LinearLayout
            android:background="#F0F0F0"
@@ -61,10 +61,14 @@
            </RelativeLayout>
 
        </LinearLayout>
+
            <TextView
                android:background="#B4B3B3"
                android:layout_width="match_parent"
                android:layout_height="1dp" />
+
+
+
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
@@ -82,32 +86,34 @@
                <!--android:layout_height="match_parent">-->
 
            <!--</RelativeLayout>-->
-           <com.example.asus.zlzjqrcode.huadong.MyListView
+           <ListView
                android:id="@+id/card_4_list_1"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:listSelector="@color/primary_blue"
                android:layout_height="wrap_content">
 
-           </com.example.asus.zlzjqrcode.huadong.MyListView>
+           </ListView>
            <TextView
                android:background="#B4B3B3"
                android:layout_width="1dp"
                android:layout_height="match_parent" />
-           <com.example.asus.zlzjqrcode.huadong.MyListView
+           <ListView
                android:id="@+id/card_4_list_2"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
 
-           </com.example.asus.zlzjqrcode.huadong.MyListView>
+           </ListView>
 
 
        </LinearLayout>
+
        </LinearLayout>
 </android.support.v7.widget.CardView>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="10dp" />
     </LinearLayout>
+
 </LinearLayout>
