--- a/app/src/main/res/layout/user_xiangqing_dialog.xml
+++ b/app/src/main/res/layout/user_xiangqing_dialog.xml
@@ -17,7 +17,7 @@
             android:layout_centerVertical="true"
             android:text="合伙人详情"
             android:textColor="@color/black"
-            android:textSize="50px"
+            android:textSize="17dp"
             android:id="@+id/textView3" />
 
 
@@ -47,7 +47,7 @@
                 android:layout_marginStart="26dp"
                 android:text="姓名："
                 android:textColor="@color/black"
-                android:textSize="45px" />
+                android:textSize="15dp" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -64,7 +64,7 @@
                 android:layout_centerVertical="true"
                 android:text="张磊"
                 android:textColor="@color/black"
-                android:textSize="45px" />
+                android:textSize="15dp" />
         </RelativeLayout>
 
     </LinearLayout>
@@ -93,7 +93,7 @@
                 android:layout_marginStart="26dp"
                 android:text="手机号："
                 android:textColor="@color/black"
-                android:textSize="45px" />
+                android:textSize="15dp" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -109,7 +109,7 @@
                 android:layout_centerVertical="true"
                 android:text="1832808870"
                 android:textColor="@color/black"
-                android:textSize="45px" />
+                android:textSize="15dp" />
         </RelativeLayout>
     </LinearLayout>
     <TextView
@@ -137,7 +137,7 @@
                 android:layout_marginStart="26dp"
                 android:text="身份证："
                 android:textColor="@color/black"
-                android:textSize="45px" />
+                android:textSize="15dp" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -153,7 +153,7 @@
                 android:layout_centerVertical="true"
                 android:text="513723****697X"
                 android:textColor="@color/black"
-                android:textSize="45px" />
+                android:textSize="15dp" />
         </RelativeLayout>
     </LinearLayout>
     <TextView
@@ -181,7 +181,7 @@
                 android:layout_marginStart="26dp"
                 android:text="业绩总数："
                 android:textColor="@color/black"
-                android:textSize="45px" />
+                android:textSize="15dp" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -197,7 +197,7 @@
                 android:layout_centerVertical="true"
                 android:text="0人"
                 android:textColor="@color/black"
-                android:textSize="45px" />
+                android:textSize="15dp" />
         </RelativeLayout>
 
 
@@ -221,6 +221,6 @@
             android:layout_centerVertical="true"
             android:text="确定"
             android:textColor="@color/primary_blue"
-            android:textSize="50px" />
+            android:textSize="17dp" />
     </RelativeLayout>
 </LinearLayout>
