--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,6 +20,10 @@
         <item name="color">@android:color/white</item>
     </style>
 
+    <style name="mainfstyle">
+        <item name="android:windowEnterAnimation">@anim/mainfg_dialog_in</item>
+        <item name="android:windowExitAnimation">@anim/out</item>
+    </style>
     <style parent="@android:style/Theme.Dialog" name="progress_dialog">
 
     <item name="android:windowFrame">@null</item>
@@ -66,5 +70,9 @@
     <style name="anim_style">
         <item name="android:windowEnterAnimation">@anim/dialog_anim_in</item>
         <item name="android:windowExitAnimation">@anim/dialog_anim_out</item>
+    </style>
+
+    <style name="floatlabelededittext">
+        <item name="android:textColor">#FF0000</item>
     </style>
 </resources>
